--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
         "models": "model",
         "projects": "project",
         "runs": "run",
-        "workflows": "workflow"
+        "workflows": "workflow",
+        "logs": "log"
     }
 }
